Added example for using a pwm for the leds

--- a/picopp/CMakeLists.txt
+++ b/picopp/CMakeLists.txt
@@ -4,8 +4,13 @@ add_library(picopp
     pio.cc
     pioasm.h
     pioasm.cc
+    pwm.h
 )
 
-target_link_libraries(picopp pico_stdlib hardware_pio)
+target_link_libraries(picopp
+    pico_stdlib
+    hardware_pio
+    hardware_pwm
+)
 
 target_include_directories(picopp INTERFACE ../)
