Added APA102 driver

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(buzzer)
 add_subdirectory(distance_sensor)
+add_subdirectory(light)
 add_subdirectory(running_lights)
 add_subdirectory(servo_buttons)
 add_subdirectory(ws2812)
